--- a/Client/Connection.css
+++ b/Client/Connection.css
@@ -1,27 +1,57 @@
 /* Fonts from Google Fonts - more at https://fonts.google.com */
 
 body {
-  background-color: white;
-  font-family: "Times", sans-serif;
+  font-family: Andale Mono, monospace;
   padding: 5px 25px;
-  font-size: 18px;
+  font-size: 25px;
   margin: 0;
-  color: #444;
+  color: black;
   text-align: center;
+  margin-top: 50vh;
+  transform: translateY(-50%);
+  background-image:url(mainOcean.jpg);
+  background-position:center center;
 }
 
 h1 {
-  font-family: "Times", serif;
+  font-family: Impact, fantasy;
   font-size: 32px;
 }
 
 .blocksaisi {
   display: inline-block;
-  width: 100px;
+  font-family: Arial Narrow, sans-serif;
+  font-size: 22px;
+  width: 70px;
+  height: 35px;
+}
+
+.Saisi input{
+  width: 140px;
+  height: 25px;
+  border-radius:10px;
+}
+
+.Submit {
   height: 30px;
 }
 
-a {
-  font-family: "Times", sans-serif;
+.Submit input{
+  font-family: Arial Narrow, sans-serif;
+  font-weight: bold;
   font-size: 12px;
+  border:none;
+  width: 35px;
+  height: 25px;
+  border-radius:5px;
+  background-color:black;
+  color:#fff;
 }
+
+a {
+  font-family: Arial Narrow, sans-serif;
+  font-size: 12px;
+  color: navy;  
+  font-style: italic;
+}
+
