--- a/Client/Enregistrement.css
+++ b/Client/Enregistrement.css
@@ -1,36 +1,28 @@
 /* Fonts from Google Fonts - more at https://fonts.google.com */
 
 body {
-  background-color: white;
-  font-family: "Times", sans-serif;
   padding: 5px 25px;
-  font-size: 18px;
   margin: 0;
-  color: #444;
+  color: black;
+  background-image:url(mainOcean.jpg);
+  background-position:center center;
   text-align: center;
 }
 
 h1 {
-  font-family: "Times", serif;
-  font-size: 32px;
+  font-family: Impact, fantasy;
+  font-size: 50px;
 }
 
-.divNomPrenom {
-  display: inline-block;
-  width:50%;
-  height:50px;
-  font-size: 18px;
-}
+
 
 .blockReste {
   display: inline-block;
-  font-family: "Times", sans-serif;
-  font-size: 12px;
-  width: 100px;
-  height: 30px;
-  font-family: "Times", serif;
-  font-size: 18px;
-  text-align: left;
+  width: 120px;
+  height: 50px;
+  font-family: Arial Narrow, sans-serif;
+  font-weight: bold;
+  font-size: 22px;
 }
 
 .divReste {
@@ -38,7 +30,23 @@ h1 {
 }
 
 .divReste input {
-  width: 50%;
-  height: px;
+  width: 25%;
+  height: 20px;
+  border-radius: 12px;
+}
+
+.submit input {
+  font-family: Arial Narrow, sans-serif;
+  font-weight: bold;
+  font-size: 12px;
+  width: 100px;
+  height: 25px;
+  border-radius:5px;
+  background-color:black;
+  color:#fff;
+  margin: 23px px 23px 5px;
+}
+
+
   
 }
