--- a/Client/Connection.css
+++ b/Client/Connection.css
@@ -1,7 +1,6 @@
 /* Fonts from Google Fonts - more at https://fonts.google.com */
 
 body {
-  font-family: Andale Mono, monospace;
   padding: 5px 25px;
   font-size: 25px;
   margin: 0;
@@ -15,19 +14,20 @@ body {
 
 h1 {
   font-family: Impact, fantasy;
-  font-size: 32px;
+  font-size: 50px;
 }
 
 .blocksaisi {
   display: inline-block;
   font-family: Arial Narrow, sans-serif;
+  font-weight: bold;
   font-size: 22px;
-  width: 70px;
-  height: 35px;
+  width: 170px;
+  height: 55px;
 }
 
 .Saisi input{
-  width: 140px;
+  width: 160px;
   height: 25px;
   border-radius:10px;
 }
@@ -41,7 +41,7 @@ h1 {
   font-weight: bold;
   font-size: 12px;
   border:none;
-  width: 35px;
+  width: 50px;
   height: 25px;
   border-radius:5px;
   background-color:black;
