--- a/Client/Enregistrement.css
+++ b/Client/Enregistrement.css
@@ -7,6 +7,8 @@ body {
   background-image:url(mainOcean.jpg);
   background-position:center center;
   text-align: center;
+  margin-top: 50vh;
+  transform: translateY(-50%);;
 }
 
 h1 {
@@ -30,7 +32,7 @@ h1 {
 }
 
 .divReste input {
-  width: 25%;
+  width: 15%;
   height: 20px;
   border-radius: 12px;
 }
