--- a/Client/SignInVA/Connection.css
+++ b/Client/SignInVA/Connection.css
@@ -2,13 +2,15 @@
 
 body {
   padding: 5px 25px;
+  font-size: 25px;
   margin: 0;
   color: black;
-  background-image:url(mainOcean.jpg);
-  background-position:center center;
   text-align: center;
   margin-top: 50vh;
-  transform: translateY(-50%);;
+  transform: translateY(-50%);
+  background-image:url(Ocean.jpg);
+  background-size: cover;
+  background-position:center;
 }
 
 h1 {
@@ -16,39 +18,41 @@ h1 {
   font-size: 50px;
 }
 
-
-
-.blockReste {
+.blocksaisi {
   display: inline-block;
-  width: 120px;
-  height: 50px;
   font-family: Arial Narrow, sans-serif;
   font-weight: bold;
   font-size: 22px;
+  width: 170px;
+  height: 55px;
 }
 
-.divReste {
-  text-align: center;
+.Saisi input{
+  width: 160px;
+  height: 25px;
+  border-radius:10px;
 }
 
-.divReste input {
-  width: 15%;
-  height: 20px;
-  border-radius: 12px;
+.Submit {
+  height: 30px;
 }
 
-.submit input {
+.Submit input{
   font-family: Arial Narrow, sans-serif;
   font-weight: bold;
   font-size: 12px;
-  width: 100px;
+  border:none;
+  width: 50px;
   height: 25px;
   border-radius:5px;
   background-color:black;
   color:#fff;
-  margin: 23px px 23px 5px;
 }
 
-
-  
+a {
+  font-family: Arial Narrow, sans-serif;
+  font-size: 12px;
+  color: navy;  
+  font-style: italic;
 }
+
