--- a/Client/SignInVA/Enregistrement.css
+++ b/Client/SignInVA/Enregistrement.css
@@ -2,14 +2,14 @@
 
 body {
   padding: 5px 25px;
-  font-size: 25px;
   margin: 0;
   color: black;
+  background-image:url(Ocean.jpg);
+  background-size: cover;
+  background-position:center;
   text-align: center;
   margin-top: 50vh;
-  transform: translateY(-50%);
-  background-image:url(mainOcean.jpg);
-  background-position:center center;
+  transform: translateY(-50%);;
 }
 
 h1 {
@@ -17,41 +17,39 @@ h1 {
   font-size: 50px;
 }
 
-.blocksaisi {
+
+
+.blockReste {
   display: inline-block;
+  width: 120px;
+  height: 50px;
   font-family: Arial Narrow, sans-serif;
   font-weight: bold;
   font-size: 22px;
-  width: 170px;
-  height: 55px;
 }
 
-.Saisi input{
-  width: 160px;
-  height: 25px;
-  border-radius:10px;
+.divReste {
+  text-align: center;
 }
 
-.Submit {
-  height: 30px;
+.divReste input {
+  width: 15%;
+  height: 20px;
+  border-radius: 12px;
 }
 
-.Submit input{
+.submit input {
   font-family: Arial Narrow, sans-serif;
   font-weight: bold;
   font-size: 12px;
-  border:none;
-  width: 50px;
+  width: 100px;
   height: 25px;
   border-radius:5px;
   background-color:black;
   color:#fff;
+  margin: 23px px 23px 5px;
 }
 
-a {
-  font-family: Arial Narrow, sans-serif;
-  font-size: 12px;
-  color: navy;  
-  font-style: italic;
-}
 
+  
+}
